--- a/package.json
+++ b/package.json
@@ -23,13 +23,18 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0",
-    "@angular/core": "^16.0.0",
-    "@angular/fire": "^7.6.1"
+    "@angular/core": "^16.1.0",
+    "@angular/fire": "~7.6.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.0",
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.0",
     "typescript": "~5.0.2"
+  },
+  "overrides": {
+    "@angular/fire@~7.6.1": {
+      "rxfire@^6.0.0": "6.0.3"
+    }
   }
 }
